--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "chai": "^4.4.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.10.0",
